--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'application'
 
-mainClassName = "com.daose.hackthenorth"
+mainClassName = "uClip.Uclip"
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -28,6 +28,4 @@ dependencies {
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
-     
-    
 }
